# Smooth-Excess-Area

./: CMakeLists.txt  README.md
LBFGS_iteration_count/: nlopt_plis_fix.patch  plis.c
apps/: SEA_QN.cpp
cmake/: Eigen3.cmake  cli11.cmake  nlohmann-json.cmake  nlopt.cmake
example/: input  result  solver_options
src/: Arc_Occupancy.cpp  Arc_Occupancy.h  Arc_Overlap_Formulation.cpp  Arc_Overlap_Formulation.h  Arrangement.cpp  Arrangement.h  Circular_Arc.cpp  Circular_Arc.h  Rectangle.cpp  Rectangle.h  Total_Lifted_Content.cpp  Total_Lifted_Content.h  geo_util.cpp  geo_util.h  optimization_util.cpp  optimization_util.h  timing.cpp  timing.h
